[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/Tutorial.gd" type="Script" id=1]
[ext_resource path="res://fonts/Orbitron/static/Orbitron-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://fonts/Orbitron/static/Orbitron-Medium.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 10
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 10
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 6
font_data = ExtResource( 2 )

[node name="Tutorial" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.323517
margin_top = 0.647064
margin_right = -0.323517
margin_bottom = 0.647064
color = Color( 0, 0, 0, 1 )

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
margin_top = 34.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 1 )
text = "HOW TO PLAY"
align = 1

[node name="ControlTitle" type="Label" parent="."]
anchor_right = 1.0
margin_left = 30.0
margin_top = 68.0
margin_bottom = 82.0
focus_neighbour_top = NodePath("../Exit")
focus_neighbour_bottom = NodePath("../Exit")
mouse_filter = 0
custom_fonts/font = SubResource( 2 )
text = "CONTROLS"

[node name="Objectives" type="Label" parent="."]
anchor_right = 1.0
margin_left = 280.0
margin_top = 68.0
margin_right = -30.0
margin_bottom = 82.0
focus_neighbour_top = NodePath("../Exit")
focus_neighbour_bottom = NodePath("../Exit")
mouse_filter = 0
custom_fonts/font = SubResource( 2 )
text = "OBJECTIVES"

[node name="Back" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 30.0
margin_top = 102.0
margin_right = -418.0
margin_bottom = 116.0
focus_neighbour_top = NodePath("../Start")
focus_neighbour_bottom = NodePath("../Start")
mouse_filter = 0
custom_fonts/font = SubResource( 3 )
text = "BACK"

[node name="ControlDesc" type="Label" parent="."]
anchor_right = 1.0
margin_left = 35.0
margin_top = 83.0
margin_right = -280.0
margin_bottom = 219.0
custom_fonts/font = SubResource( 5 )
text = "- WASD : Move
- E : DJ
- SPACE : Shoo Guests Away"

[node name="ObjectivesDesc" type="Label" parent="."]
anchor_right = 1.0
margin_left = 280.0
margin_top = 83.0
margin_right = -35.0
margin_bottom = 219.0
custom_fonts/font = SubResource( 5 )
text = "- Walk up to fires to start putting them out
- DJ near guests to earn money for repairs
- Shoo guests away from fires to keep them safe"
[connection signal="focus_entered" from="ControlTitle" to="." method="_on_Start_focus_entered"]
[connection signal="focus_exited" from="ControlTitle" to="." method="_on_Start_focus_exited"]
[connection signal="gui_input" from="ControlTitle" to="." method="_on_Start_gui_input"]
[connection signal="mouse_entered" from="ControlTitle" to="." method="_on_Start_mouse_entered"]
[connection signal="mouse_exited" from="ControlTitle" to="." method="_on_Start_mouse_exited"]
[connection signal="focus_entered" from="Objectives" to="." method="_on_Start_focus_entered"]
[connection signal="focus_exited" from="Objectives" to="." method="_on_Start_focus_exited"]
[connection signal="gui_input" from="Objectives" to="." method="_on_Start_gui_input"]
[connection signal="mouse_entered" from="Objectives" to="." method="_on_Start_mouse_entered"]
[connection signal="mouse_exited" from="Objectives" to="." method="_on_Start_mouse_exited"]
[connection signal="gui_input" from="Back" to="." method="_on_Back_gui_input"]
[connection signal="mouse_entered" from="Back" to="." method="_on_Back_mouse_entered"]
[connection signal="mouse_exited" from="Back" to="." method="_on_Back_mouse_exited"]
